--- a/src/components/App/Sidebar/Sidebar.css
+++ b/src/components/App/Sidebar/Sidebar.css
@@ -1,4 +1,7 @@
-.sidebar {
-    width: 300px;
-    background-color: white;
+.component-sidebar {
+    width: 30%;
+    padding: 50px 20px;
+    background-color: #5b606b;
+    margin: 15px;
+    border-radius: 6px;
 }
