--- a/src/components/App/Sidebar/SearchBar/SearchBar.css
+++ b/src/components/App/Sidebar/SearchBar/SearchBar.css
@@ -6,4 +6,14 @@
     border-radius: 25px;
     padding: 10px;
     width: 100%;
+    outline: none;
+    font-size: 30px;
+    font-weight: bold;
+    padding-left: 30px;
+    color: #5b606b;
+}
+
+.component-search-input input:focus {
+  outline-color: transparent;
+  outline-style: none;
 }
