--- a/src/components/App/Sidebar/SearchBar/SearchBar.css
+++ b/src/components/App/Sidebar/SearchBar/SearchBar.css
@@ -2,14 +2,14 @@
     display: flex;
 }
 .component-search-input input {
-    height: 25px;
+    height: 50px;
     border-radius: 25px;
     padding: 10px;
     width: 100%;
     outline: none;
     font-size: 30px;
     font-weight: bold;
-    padding-left: 30px;
+    padding: 0 20px;
     color: #5b606b;
 }
 
