--- a/src/components/App/Forecast/Thumbnail/Thumbnail.css
+++ b/src/components/App/Forecast/Thumbnail/Thumbnail.css
@@ -1,5 +1,8 @@
 .wrapper-thumbnail {
     border-radius: 4px;
-    background-color: #838996;
     padding: 20px 0;
+}
+
+.thumbnail {
+    padding: 4px;
 }
