--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,54 +1,17 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-body {
-    /* background: linear-gradient(270deg, #697d78, #6a6d9b, #4794b7); */
-    /* background-size: 600% 600%; */
-
-    background: url('../../assets/background.jpg');
+    background: url('../../assets/background.svg');
     background-size: cover;
-
-    /* -webkit-animation: AnimationName 30s ease infinite;
-    -moz-animation: AnimationName 30s ease infinite;
-    animation: AnimationName 30s ease infinite; */
-}
-
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-body {
-  /* background-color: #282c34; */
-  min-height: 100vh;
-  display: flex;
-  flex-direction: row;
-  /* align-items: center;
-  justify-content: center; */
-  /* font-size: calc(10px + 2vmin); */
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: row;
+    color: white;
 }
 
 .scroll-container {
