--- a/src/components/App/Sidebar/Sidebar.css
+++ b/src/components/App/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .component-sidebar {
     height: 100%;
-    padding: 50px 20px;
+    padding: 20px;
     background-color: #5b606b80;
     border-radius: 6px;
 }
