--- a/src/components/App/Sidebar/SearchBar/SearchBar.css
+++ b/src/components/App/Sidebar/SearchBar/SearchBar.css
@@ -21,6 +21,7 @@
     height: 50px;
     border-radius: 50%;
     border: 0;
+    background-color: white;
     transition: color 0.3s ease, background-color 0.3s ease;
 }
 
